--- a/stylesheet.css
+++ b/stylesheet.css
@@ -252,47 +252,7 @@ h2 {
 }
 
 /* Projects */
-#project-section {
-    width: 98vw;
-    padding: 1%;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(250, 250, 242);
-}
-.project-box {
-    background-image: url('Assets/Paintings/peonies_in_a_vase_2018.44.124.webp');
-    background-size: 100vw;
-    margin-top: 4%;
-    display: flex;
-    padding: 1.5%;
-    text-align: left;
-    overflow: hidden;
-    justify-content: space-around;
-    width: 75vw;
-    color: rgb(103, 103, 103);
-    border: 3mm ridge rgb(209, 188, 94);
-    outline: 0.4rem dashed rgb(199, 187, 78);
-    box-shadow: 0 0 0 0.3rem rgb(193, 173, 85);
-    display: flex;
-}
-.project-images {
-    width: 20vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    margin: 1vh 1vw;
-    padding: 1vh;
-    background-color: whitesmoke;
-}
 
-@media (max-width: 1060px) {
-    .project-images {
-        display: none;
-    }
-}
 @media (max-width: 900px) {
     .project-box {
         width: 80vw;
@@ -369,169 +329,34 @@ h2 {
 }
 
 /* Gallery */
-#gallery {
+
+#gallery-container {
     display: flex;
-    text-align: center;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 6vh;
-    width: 100vw;
-    background-color: #f6efed;
-}
-#gall-title {
-    width: 100%;
-    margin: 0px;
-    background-color: #f6efed;
-    color: black;
-}
-.gallery-year {
-    display: flex;
-    align-items: stretch;
-    justify-content: center;
-    width: 97vw;
-    padding: 1%;
-    margin: 1%;
-}
-.year-content {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
     width: 100%;
-}
-.year-timeline {
-    display: flex;
-    flex-direction: column;
-    width: 10vw;
-    margin: 3%;
-    margin-top: 0;
-    margin-bottom: 0;
-    align-items: center;
     justify-content: center;
-    overflow: hidden;
-    padding: 1%;
-    padding-bottom: 0;
-    padding-top: 0;
 }
-.year-box {
-    padding: 1% 35%;
-    border: 1px solid;
-    display: flex;
-    margin: 2%;
-    justify-content: center;
-    align-items: center;
-    font-size: x-large;
-    color: rgba(0, 0, 0, 0.37);
-}
-.year-line {
-    width: 1%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.37);
-}
-
 .gallery-caption-pair {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    gap: 0;
-    width: 25vw;
-    height: 25vw;
-    overflow: hidden;
-    margin: 0.5%;
-    border: 1mm ridge rgb(209, 188, 94);
-    outline: 0.2rem dashed rgb(199, 187, 78);
-    box-shadow: 0 0 0 0.1rem rgb(193, 173, 85);
-}
-.gallery-caption-pair:hover {
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 0;
-    width: 25vw;
-    height: 25vw;
-    overflow: hidden;
-    margin: 0.5%;
-    filter: brightness(1.1);
+    margin: 2%;
+    padding: 1%;
+    border: 1px solid black;
+    color: gray;
+    text-align: center;
+    box-shadow: 10px 10px 3px 2px rgba(0, 0, 0, 0.2);
 }
 .gallery-pic {
-    flex-shrink: 0;
-    min-width: 100%;
-    min-height: 100%;
     width: 25vw;
-    height: auto;
 }
-.gallery-caption {
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    width: 25vw;
-    height: 25vw;
-    background-image: linear-gradient(
-        180deg,
-        rgba(255, 255, 255, 0),
-        rgba(0, 0, 0, 0.253) 65%,
-        rgb(0, 0, 0)
-    );
-    position: absolute;
-    z-index: 0;
-}
-
-@media (max-width: 960px) {
+@media (max-width: 800px) {
     .gallery-pic {
         width: 80vw;
-        height: auto;
-        margin: 5% 3% 1% 3%;
     }
     .gallery-caption-pair {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: end;
-        gap: 0;
-        width: 80vw;
-        height: inherit;
-        overflow: hidden;
-        margin: 1%;
-    }
-    .gallery-caption-pair:hover {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: end;
-        gap: 0;
-        width: 80vw;
-        height: inherit;
-        overflow: hidden;
-        filter: brightness(1.1);
-        margin: 1%;
-    }
-    .gallery-caption {
-        display: flex;
-        flex-direction: column;
-        justify-content: end;
-        align-items: center;
-        width: 80vw;
-        background-image: linear-gradient(
-            180deg,
-            rgba(255, 255, 255, 0),
-            rgba(0, 0, 0, 0.253) 65%,
-            rgb(0, 0, 0)
-        );
-        position: absolute;
-        z-index: 0;
-    }
-    .year-content {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .year-timeline {
-        display: none;
+        padding: 3%;
     }
 }
 
@@ -563,7 +388,6 @@ footer {
     background-repeat: no-repeat;
     height: 40vh;
 }
-
 #photo-title {
     background-color: white;
     padding: 1%;
@@ -574,7 +398,6 @@ footer {
     letter-spacing: 15px;
     text-indent: 25px;
 }
-
 #photo-about {
     background-color: rgb(205, 218, 222);
     display: flex;
