--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,6 +17,7 @@ body {
     background-color: white;
     color: rgb(90, 90, 90);
     width: 100%;
+    height: 100vh;
     margin: 0;
     overflow-x: hidden;
 }
@@ -28,11 +29,11 @@ body {
     border: 1px solid #e4ece3;
 }
 a {
-    color: rgb(47, 94, 57);
+    color: rgb(177, 103, 33);
     font-weight: 700;
 }
 a:hover {
-    color: rgb(60, 117, 72);
+    color: rgb(134, 77, 24);
     font-weight: 700;
 }
 li {
@@ -84,6 +85,8 @@ h2 {
 
 /* Nav Bar Stuff */
 #nav-bar {
+    background-repeat: no-repeat;
+    background-image: url('Assets/apples.jpg');
     text-align: center;
     position: fixed;
     background-color: rgb(255, 255, 255);
@@ -92,13 +95,14 @@ h2 {
     align-items: center;
     justify-content: center;
     padding: 1.3% 0;
-    height: 4.3vh;
+    height: 5vh;
     font-size: 25px;
     box-shadow: 0px 5px 6px -5px rgb(70, 70, 70);
     width: 100vw;
     z-index: 5;
 }
 #nav-title {
+    color: whitesmoke;
     width: 25vw;
     display: flex;
     font-size: 35px;
@@ -109,7 +113,7 @@ h2 {
     color: rgb(62, 62, 62);
 }
 .nav-line {
-    width: 7vw;
+    width: 10vw;
 }
 .nav-element {
     margin: 15px;
@@ -133,61 +137,7 @@ h2 {
 .selected-nav {
     color: rgb(62, 62, 62);
 }
-@media (max-width: 600px) {
-    .nav-element {
-        font-size: medium;
-    }
-    #nav-title {
-        font-size: big;
-        text-align: center;
-        justify-content: center;
-    }
-    #fake-nav {
-        padding: 1.3%;
-        height: 6.3vh;
-        width: 100vw;
-    }
-    #nav-bar {
-        text-align: center;
-        position: fixed;
-        background-color: rgb(255, 255, 255);
-        color: rgb(103, 103, 103);
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 2.5% 0;
-        height: 6vh;
-        z-index: 5;
-    }
-}
-
 @media (max-width: 450px) {
-    .nav-element {
-        font-size: medium;
-        width: fit-content;
-        margin: 0;
-    }
-    #nav-bar {
-        display: flex;
-        justify-content: center;
-        gap: 3%;
-    }
-    .nav-element:hover {
-        font-size: medium;
-        width: 15vw;
-        margin: 0;
-        cursor: pointer;
-        font-weight: 200;
-        color: rgb(34, 34, 34);
-        transition: color 1s ease-in-out;
-    }
-    #nav-title {
-        font-size: large;
-        width: 10vw;
-    }
-    .nav-line {
-        display: none;
-    }
     .page-text {
         width: 100vw;
     }
@@ -196,16 +146,31 @@ h2 {
 /* Default Page */
 #banner {
     height: fit-content;
-    padding: 8% 0 0 0;
+    padding: 5% 0 0 0;
     overflow: hidden;
     width: 100vw;
     background-repeat: no-repeat;
-    background-image: url('Assets/Paintings/atraces.jpg');
+    background-image: url('Assets/apples.jpg');
     background-size: 100vw;
     color: whitesmoke;
     display: flex;
     justify-content: end;
     align-items: end;
+}
+@media (max-width: 500px) {
+    #banner {
+        height: fit-content;
+        padding: 15% 0 0 0;
+        overflow: hidden;
+        width: 100vw;
+        background-repeat: no-repeat;
+        background-image: url('Assets/apples.jpg');
+        background-size: 100vw;
+        color: whitesmoke;
+        display: flex;
+        justify-content: end;
+        align-items: end;
+    }
 }
 #painting-caption {
     margin: 0;
@@ -237,7 +202,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1%;
+    padding: 2%;
 }
 #project-page-container {
     background-color: rgba(255, 255, 255, 1);
@@ -254,10 +219,13 @@ h2 {
     justify-content: start;
     align-items: start;
     width: 60vw;
-    font-size: large;
+    font-size: larger;
 }
 .page-text {
     width: 60vw;
+}
+.page-text img {
+    width: 3vw;
 }
 @media (max-width: 570px) {
     #page-title {
@@ -444,14 +412,14 @@ h2 {
 /* Footer  */
 footer {
     text-align: center;
-    color: black;
-    background-color: whitesmoke;
+    color: rgb(58, 58, 58);
     padding: 3px;
-    margin-top: 1%;
+    width: 100vw;
+    margin-top: 3%;
 }
 @media (max-width: 400px) {
     footer {
-        margin-top: 4%;
+        margin-top: 5%;
         padding-left: 2%;
         padding-right: 2%;
     }
